# menu_extractor

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
menu_extractor/: __init__.py  classify.py  exceptions.py  extract.py  geometry.py  layout.py  models.py  normalize.py  parse.py
output/: menu.json
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_golden.py
tests/unit/: test_attach_prices_globally.py  test_classify.py  test_detect_sub_header.py  test_extract.py  test_layout.py  test_normalize.py  test_parse.py
