[project]
name = "menu-extractor"
version = "0.1.0"
description = "Extract dishes from a two-column restaurant menu PDF into normalized JSON"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: fast, hermetic tests against pure functions / synthetic inputs",
    "integration: slower tests that load the real sample PDF",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade — enforces modern syntax (e.g. no `from __future__ import annotations`)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "ERA",  # eradicate (commented-out code)
]
ignore = [
    "E501",   # line too long — formatter handles it
    "SIM108", # ternary instead of if/else — sometimes if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]
# normalize.py and its tests literally enumerate ambiguous unicode glyphs to normalize them.
"menu_extractor/normalize.py" = ["RUF001"]
"tests/unit/test_normalize.py" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["menu_extractor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["menu_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
